2005-04-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-traps.c (_cairo_traps_extract_region): Work around
	a pair of bugs elsewhere (denegerate trapezoids from tesellator,
	pixman_region_union_rect() failing on width/height zero rectangles)

2005-04-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairoint.h src/cairo-traps.c: Add _cairo_traps_extract_region
	for converting trapezoids into a pixman region.

	* src/cairo-gstate.c (cairo_clip): Represent all rectangular
	pixel-aligned regions as regions, not just single rectangles.

	* src/cairo-gstate.c (_cairo_gstate_clip_and_composite_trapezoid):
	Split into manageable pieces, optimize rectangular pixel-
	aligned regions by using _cairo_surface_fill_rectangles()
	or _cairo_surface_set_clip_region() as appropriate.

	* tests/trap-clip.c tests/trap-clip-ref.png tests/Makefile.am:
	Add a test for trapezoids clipping.

	* doc/public/cairo-docs.xml: Add an index.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* test/translate-show-surface.c: Note that bug is now fixed.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* autogen.sh: Replace errant use of aclocal with $ACLOCAL, as
	reported by Martin Hedenfalk. Closes bug #3000.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* src/cairo-pattern.c:
	* src/cairo-surface.c: (_cairo_surface_init): Default to
	CAIRO_FILTER_GOOD rather than CAIRO_FILTER_BEST.

	* src/cairo-pattern.c:
	(_cairo_pattern_acquire_surface_for_surface): Optimize to use
	CAIRO_FILTER_NEAREST when the pattern matrix is an integer
	translation.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* src/cairo-pattern.c:
	(_cairo_pattern_acquire_surface_for_surface):
	* src/cairo-surface.c: (_cairo_surface_init): Use
	CAIRO_FILTER_BEST by default rather than CAIRO_FILTER_NEAREST.

2005-04-12  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c (_cairo_gstate_show_surface): Offset the src
	pattern by (0,0)->CTM. This fixes test/translate-show-surface.

	* src/cairo-glitz-surface.c